<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_list_item_resolve"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_list_item_resolve_no_resolve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textview_list_item_resolve_margin"
        android:layout_gravity="center_horizontal"
        android:textStyle="normal"
        android:text="@string/text_dialog_resolves_no_resolves" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_list_item_resolve"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_list_item_resolve_margin"
        app:cardCornerRadius="@dimen/cardview_list_item_resolve_corner_radius"
        app:cardElevation="@dimen/cardview_list_item_resolve_card_elevation"
        app:cardBackgroundColor="@color/cardBackgroundColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/relativelayout_list_item_resolve_padding">

            <ImageView
                android:id="@+id/imageview_list_item_resolve_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_resolves_delete_resolve"
                app:srcCompat="@drawable/icon_delete_selector" />

            <TextView
                android:id="@+id/textview_list_item_resolve_match"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/imageview_list_item_resolve_delete"
                android:textStyle="normal"
                android:singleLine="true"
                android:textSize="@dimen/list_item_resolve_text_size"
                android:ellipsize="end"
                android:text="" />

            <TextView
                android:id="@+id/textview_list_item_resolve_connect_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textview_list_item_resolve_match"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/textview_list_item_resolve_connect_to_margin_top"
                android:layout_marginEnd="@dimen/textview_list_item_resolve_connect_to_margin_end"
                android:singleLine="true"
                android:textSize="@dimen/list_item_resolve_text_size"
                android:ellipsize="end"
                android:text="" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
