...
        android:padding="@dimen/linearlayout_dialog_resolves_padding"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_dialog_resolves_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/textview_dialog_resolves_label_margin"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/label_dialog_resolves_resolves" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listview_dialog_resolves_resolves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/listview_dialog_resolves_margin"
            android:padding="@dimen/listview_dialog_resolves_padding"
            android:layout_gravity="fill_horizontal"
            android:scrollbars="none" />
...
