/*
 * Copyright (c) 2026 Alwin Ibba
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package net.ibbaa.keepitup.ui.dialog;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isRoot;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.CoreMatchers.not;
import static org.hamcrest.Matchers.allOf;
import static org.junit.Assert.assertEquals;

import android.os.Bundle;

import androidx.test.core.app.ActivityScenario;
import androidx.test.espresso.action.ViewActions;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.MediumTest;

import net.ibbaa.keepitup.R;
import net.ibbaa.keepitup.model.Resolve;
import net.ibbaa.keepitup.ui.BaseUITest;
import net.ibbaa.keepitup.ui.NetworkTaskMainActivity;
import net.ibbaa.keepitup.util.BundleUtil;

import org.junit.Test;
import org.junit.runner.RunWith;

import java.util.Collections;
import java.util.List;

@MediumTest
@SuppressWarnings({"SequencedCollectionMethodCanBeUsed"})
@RunWith(AndroidJUnit4.class)
public class ResolvesDialogTest extends BaseUITest {

    private ActivityScenario<?> activityScenario;

    @Test
    public void testDialogConfigurationEmptyList() {
        activityScenario = launchRecyclerViewBaseActivity(NetworkTaskMainActivity.class, getBypassSystemSAFBundle());
        showResolvesDialog(Collections.emptyList());
        onView(withId(R.id.textview_dialog_resolves_label)).check(matches(withText("Resolve rules")));
        onView(withId(R.id.listview_dialog_resolves_resolves)).check(matches(withListSize(1)));
        onView(allOf(withId(R.id.textview_list_item_resolve_no_resolve), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(isDisplayed()));
        onView(allOf(withId(R.id.textview_list_item_resolve_no_resolve), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("No resolve rules defined")));
        assertEquals(1L, getDialog().getNetworkTaskId());
        assertEquals(0, getDialog().getAdapter().getAllItems().size());
        activityScenario.close();
    }

    @Test
    public void testDialogConfigurationEmptyListScreenRotation() {
        activityScenario = launchRecyclerViewBaseActivity(NetworkTaskMainActivity.class, getBypassSystemSAFBundle());
        showResolvesDialog(Collections.emptyList());
        onView(withId(R.id.listview_dialog_resolves_resolves)).check(matches(withListSize(1)));
        onView(allOf(withId(R.id.textview_list_item_resolve_no_resolve), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(isDisplayed()));
        onView(allOf(withId(R.id.textview_list_item_resolve_no_resolve), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("No resolve rules defined")));
        rotateScreen(activityScenario);
        onView(withId(R.id.listview_dialog_resolves_resolves)).check(matches(withListSize(1)));
        onView(allOf(withId(R.id.textview_list_item_resolve_no_resolve), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(isDisplayed()));
        onView(allOf(withId(R.id.textview_list_item_resolve_no_resolve), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("No resolve rules defined")));
        rotateScreen(activityScenario);
        assertEquals(1L, getDialog().getNetworkTaskId());
        assertEquals(0, getDialog().getAdapter().getAllItems().size());
        activityScenario.close();
    }

    @Test
    public void testDialogConfigurationWithResolves() {
        activityScenario = launchRecyclerViewBaseActivity(NetworkTaskMainActivity.class, getBypassSystemSAFBundle());
        showResolvesDialog(List.of(getResolve(1), getResolve(2)));
        onView(withId(R.id.listview_dialog_resolves_resolves)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_resolve_no_resolve), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(not(isDisplayed())));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: match1.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: connect1.host.com:443")));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 1))).check(matches(withText("Match: match2.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 1))).check(matches(withText("Connect-to: connect2.host.com:443")));
        assertEquals(1L, getDialog().getNetworkTaskId());
        List<Resolve> items = getDialog().getAdapter().getAllItems();
        assertEquals(2, items.size());
        assertEquals(0, items.get(0).getIndex());
        assertEquals("match1.host.com", items.get(0).getSourceAddress());
        assertEquals(9090, items.get(0).getSourcePort());
        assertEquals("connect1.host.com", items.get(0).getTargetAddress());
        assertEquals(443, items.get(0).getTargetPort());
        assertEquals(1, items.get(1).getIndex());
        assertEquals("match2.host.com", items.get(1).getSourceAddress());
        assertEquals(9090, items.get(1).getSourcePort());
        assertEquals("connect2.host.com", items.get(1).getTargetAddress());
        assertEquals(443, items.get(1).getTargetPort());
        activityScenario.close();
    }

    @Test
    public void testDialogConfigurationWithResolvesScreenRotation() {
        activityScenario = launchRecyclerViewBaseActivity(NetworkTaskMainActivity.class, getBypassSystemSAFBundle());
        showResolvesDialog(List.of(getResolve(1), getResolve(2)));
        onView(withId(R.id.listview_dialog_resolves_resolves)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: match1.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: connect1.host.com:443")));
        rotateScreen(activityScenario);
        onView(withId(R.id.listview_dialog_resolves_resolves)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: match1.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: connect1.host.com:443")));
        rotateScreen(activityScenario);
        assertEquals(1L, getDialog().getNetworkTaskId());
        List<Resolve> items = getDialog().getAdapter().getAllItems();
        assertEquals(2, items.size());
        assertEquals(0, items.get(0).getIndex());
        assertEquals(1, items.get(1).getIndex());
        activityScenario.close();
    }

    @Test
    public void testMatchAndConnectToTextAllFieldsSet() {
        activityScenario = launchRecyclerViewBaseActivity(NetworkTaskMainActivity.class, getBypassSystemSAFBundle());
        showResolvesDialog(List.of(getResolve(1)));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: match1.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: connect1.host.com:443")));
        activityScenario.close();
    }

    @Test
    public void testMatchAndConnectToTextWithURLFallbackPort() {
        activityScenario = launchRecyclerViewBaseActivity(NetworkTaskMainActivity.class, getBypassSystemSAFBundle());
        Resolve resolve = new Resolve();
        resolve.setIndex(0);
        resolve.setSourceAddress("match.host.com");
        resolve.setSourcePort(-1);
        resolve.setTargetAddress("connect.host.com");
        resolve.setTargetPort(-1);
        showResolvesDialog(List.of(resolve));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: match.host.com:8080")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: connect.host.com:8080")));
        activityScenario.close();
    }

    @Test
    public void testMatchAndConnectToTextWithURLFallbackHost() {
        activityScenario = launchRecyclerViewBaseActivity(NetworkTaskMainActivity.class, getBypassSystemSAFBundle());
        Resolve resolve = new Resolve();
        resolve.setIndex(0);
        resolve.setSourceAddress("");
        resolve.setSourcePort(9090);
        resolve.setTargetAddress("");
        resolve.setTargetPort(443);
        showResolvesDialog(List.of(resolve));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: example.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: example.com:443")));
        activityScenario.close();
    }

    @Test
    public void testMatchTextEmptyResolve() {
        activityScenario = launchRecyclerViewBaseActivity(NetworkTaskMainActivity.class, getBypassSystemSAFBundle());
        Resolve resolve = getResolve(1);
        resolve.setIndex(0);
        resolve.setSourceAddress(null);
        resolve.setSourcePort(-1);
        showResolvesDialog(List.of(resolve));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: example.com:8080")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: connect1.host.com:443")));
        activityScenario.close();
    }

    @Test
    public void testConnectToTextEmptyResolve() {
        activityScenario = launchRecyclerViewBaseActivity(NetworkTaskMainActivity.class, getBypassSystemSAFBundle());
        Resolve resolve = getResolve(1);
        resolve.setIndex(0);
        resolve.setTargetAddress(null);
        resolve.setTargetPort(-1);
        showResolvesDialog(List.of(resolve));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: match1.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: example.com:8080")));
        activityScenario.close();
    }

    @Test
    public void testMatchAndConnectToTextEmptyResolve() {
        activityScenario = launchRecyclerViewBaseActivity(NetworkTaskMainActivity.class, getBypassSystemSAFBundle());
        Resolve resolve = new Resolve();
        resolve.setIndex(0);
        showResolvesDialog(List.of(resolve));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: example.com:8080")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: example.com:8080")));
        activityScenario.close();
    }

    @Test
    public void testDeleteResolveCancel() {
        activityScenario = launchRecyclerViewBaseActivity(NetworkTaskMainActivity.class, getBypassSystemSAFBundle());
        showResolvesDialog(List.of(getResolve(1), getResolve(2)));
        onView(withId(R.id.listview_dialog_resolves_resolves)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: match1.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: connect1.host.com:443")));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 1))).check(matches(withText("Match: match2.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 1))).check(matches(withText("Connect-to: connect2.host.com:443")));
        onView(isRoot()).perform(waitFor(500));
        onView(allOf(withId(R.id.imageview_list_item_resolve_delete), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).perform(click());
        onView(withId(R.id.textview_dialog_confirm_message)).check(matches(withText("Really delete?")));
        onView(withId(R.id.imageview_dialog_confirm_cancel)).perform(click());
        onView(withId(R.id.listview_dialog_resolves_resolves)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: match1.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: connect1.host.com:443")));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 1))).check(matches(withText("Match: match2.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 1))).check(matches(withText("Connect-to: connect2.host.com:443")));
        List<Resolve> items = getDialog().getAdapter().getAllItems();
        assertEquals(2, items.size());
        assertEquals(0, items.get(0).getIndex());
        assertEquals("match1.host.com", items.get(0).getSourceAddress());
        assertEquals(1, items.get(1).getIndex());
        assertEquals("match2.host.com", items.get(1).getSourceAddress());
        activityScenario.close();
    }

    @Test
    public void testDeleteResolveCancelScreenRotation() {
        activityScenario = launchRecyclerViewBaseActivity(NetworkTaskMainActivity.class, getBypassSystemSAFBundle());
        showResolvesDialog(List.of(getResolve(1), getResolve(2)));
        onView(withId(R.id.listview_dialog_resolves_resolves)).check(matches(withListSize(2)));
        onView(isRoot()).perform(waitFor(500));
        onView(allOf(withId(R.id.imageview_list_item_resolve_delete), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).perform(click());
        onView(withId(R.id.textview_dialog_confirm_message)).check(matches(withText("Really delete?")));
        rotateScreen(activityScenario);
        onView(withId(R.id.imageview_dialog_confirm_cancel)).perform(click());
        rotateScreen(activityScenario);
        onView(withId(R.id.listview_dialog_resolves_resolves)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: match1.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: connect1.host.com:443")));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 1))).check(matches(withText("Match: match2.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 1))).check(matches(withText("Connect-to: connect2.host.com:443")));
        List<Resolve> items = getDialog().getAdapter().getAllItems();
        assertEquals(2, items.size());
        assertEquals(0, items.get(0).getIndex());
        assertEquals("match1.host.com", items.get(0).getSourceAddress());
        assertEquals(1, items.get(1).getIndex());
        assertEquals("match2.host.com", items.get(1).getSourceAddress());
        activityScenario.close();
    }

    @Test
    public void testDeleteResolveSwipeCancel() {
        activityScenario = launchRecyclerViewBaseActivity(NetworkTaskMainActivity.class, getBypassSystemSAFBundle());
        showResolvesDialog(List.of(getResolve(1), getResolve(2)));
        onView(withId(R.id.listview_dialog_resolves_resolves)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: match1.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: connect1.host.com:443")));
        onView(isRoot()).perform(waitFor(500));
        onView(withRecyclerView(R.id.listview_dialog_resolves_resolves).atPosition(0)).perform(ViewActions.swipeRight());
        onView(withId(R.id.textview_dialog_confirm_message)).check(matches(withText("Really delete?")));
        onView(withId(R.id.imageview_dialog_confirm_cancel)).perform(click());
        onView(isRoot()).perform(waitFor(500));
        onView(withId(R.id.listview_dialog_resolves_resolves)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: match1.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: connect1.host.com:443")));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 1))).check(matches(withText("Match: match2.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 1))).check(matches(withText("Connect-to: connect2.host.com:443")));
        List<Resolve> items = getDialog().getAdapter().getAllItems();
        assertEquals(2, items.size());
        assertEquals(0, items.get(0).getIndex());
        assertEquals("match1.host.com", items.get(0).getSourceAddress());
        assertEquals(1, items.get(1).getIndex());
        assertEquals("match2.host.com", items.get(1).getSourceAddress());
        activityScenario.close();
    }

    @Test
    public void testDeleteResolveSwipeCancelScreenRotation() {
        activityScenario = launchRecyclerViewBaseActivity(NetworkTaskMainActivity.class, getBypassSystemSAFBundle());
        showResolvesDialog(List.of(getResolve(1), getResolve(2)));
        onView(withId(R.id.listview_dialog_resolves_resolves)).check(matches(withListSize(2)));
        onView(isRoot()).perform(waitFor(500));
        onView(withRecyclerView(R.id.listview_dialog_resolves_resolves).atPosition(0)).perform(ViewActions.swipeRight());
        onView(withId(R.id.textview_dialog_confirm_message)).check(matches(withText("Really delete?")));
        rotateScreen(activityScenario);
        onView(withId(R.id.imageview_dialog_confirm_cancel)).perform(click());
        rotateScreen(activityScenario);
        onView(withId(R.id.listview_dialog_resolves_resolves)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: match1.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: connect1.host.com:443")));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 1))).check(matches(withText("Match: match2.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 1))).check(matches(withText("Connect-to: connect2.host.com:443")));
        List<Resolve> items = getDialog().getAdapter().getAllItems();
        assertEquals(2, items.size());
        assertEquals(0, items.get(0).getIndex());
        assertEquals("match1.host.com", items.get(0).getSourceAddress());
        assertEquals(1, items.get(1).getIndex());
        assertEquals("match2.host.com", items.get(1).getSourceAddress());
        activityScenario.close();
    }

    @Test
    public void testDeleteResolveOk() {
        activityScenario = launchRecyclerViewBaseActivity(NetworkTaskMainActivity.class, getBypassSystemSAFBundle());
        showResolvesDialog(List.of(getResolve(1), getResolve(2)));
        onView(withId(R.id.listview_dialog_resolves_resolves)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_resolve_match), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Match: match1.host.com:9090")));
        onView(allOf(withId(R.id.textview_list_item_resolve_connect_to), withChildDescendantAtPosition(withId(R.id.listview_dialog_resolves_resolves), 0))).check(matches(withText("Connect-to: connect1.host.com:443")));
